# spring-mass-simulator

./: .gitignore  __init__.py  animation.py  bode.py  dashboard.py  dynamics.py  energy.py  forcing.py  pyproject.toml  requirements.txt  run_dashboard.py  setup.py
.github/workflows/: ci.yml  python-ci.yml
spring_mass/: __init__.py  animation.py  bode.py  dashboard.py  dynamics.py  energy.py  forcing.py
