[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spring-mass-simulator"
version = "0.1.0"
description = "A clean, modular spring-mass simulation package."
authors = [
    { name = "Mehrdad Arasteh" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "dash",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spring_mass"]
